correct Navbar right spacing

--- a/main.css
+++ b/main.css
@@ -78,6 +78,7 @@ nav{
             padding-left: 49px;
         }
         .fas.fa-bars{
+            margin-right: 20px;
             display: none;
         }
 
@@ -164,7 +165,7 @@ nav{
     }
     
     .hero .hero-img{
-        width: 100vw;
+        width: 100%;
         height: 500px;
         background-repeat: no-repeat;
         z-index: -1;
